# davinci-resolver

./: README.md  countries.json  countryhtml2json.sh  io.github.axtloss.davinciresolver.json  meson.build  versions.json  versions.sha1
data/: io.github.axtloss.davinciresolver.appdata.xml.in  io.github.axtloss.davinciresolver.desktop.in  io.github.axtloss.davinciresolver.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: davinci-resolver.gresource.xml  davinci-resolver.in  davinciresolver.gresource.xml  davinciresolver.in  main.py  meson.build  style.css  window.py  window.ui
src/classes/: meson.build  userData.py
src/scripts/: copy.sh  meson.build
src/utils/: davinciInstaller.py  meson.build  runAsync.py  zipFile.py
src/widgets/: entry.py  entry.ui  meson.build  tag.py  tag.ui
src/windows/: davinciInstallationView.py  davinciInstallationView.ui  davinciInstallerWindow.py  davinciInstallerWindow.ui  meson.build
